[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arsenal-ai"
version = "1.0.0-rc1"
description = "SOTA Unified Master LLM Agent Pipeline (L0-L6 Neuro-Symbolic Orchestrator)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fares Rafat" }]
keywords = [
  "llm-agents", "neuro-symbolic", "meta-prompting", "tree-of-thoughts", 
  "voyager", "reflexion", "lats", "ai-scientist", "orchestration"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "pydantic>=2.0.0",
  "loguru>=0.7.0",
  "instructor>=1.3.0",
  "litellm>=1.40.0",
  "tenacity>=8.0.0",
  "chromadb>=0.4.0", "e2b-code-interpreter>=1.0.0",
  "networkx>=3.0",
  "asyncio>=3.4.3"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0", "pytest-asyncio"]

[project.scripts]
arsenal = "arsenal_ai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arsenal_ai*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
